fix: fix cards displaying unalignged.

--- a/style.scss
+++ b/style.scss
@@ -1023,12 +1023,6 @@ svg.show-error-svg {
 
   .features-section__carousel__item div:first-child {
     width: 80%;
-  } 
-
-  .download-section__card {
-    margin: 0px auto;
-    width: 70%;
-    min-width: 280px;
   }
 
   .stay-up-to-date-section {
